@startuml doc-files/core07.3_class_diagram.png

class UIController {
	-extensions : uiExtension[]
	--
	+UIController(Cleansheet app)
	+getExtensions() : uiExtension[]
}

class ExtensionManager {
	-instance : ExtensionManager
	-extensionMap : SortedMap<String,Extension>
	--
	-ExtensionManager()
	+load(String ClassName) : SortExtension
	+load(Extension _class)
}

class Extension{
}

class SearchExtension{
	-NAME : string
	--
	+super(String name)
	+getUIExtension(UIController controller) : UIExtension
}

class UIExtension{
}

class UISearch{
	+UISearch(UIController controller);
	+getSideBar() : SearchPanel
}

class SearchReplaceUI{
	-uiController : UIController
	-searchController : SearchController
	--
	+SearchReplaceUI(UIController controller)
}

class SearchResultPanel{
	-uiController : UIController
	-searchController : SearchController
	--
	+SearchResultPanel(UIController controller)
}

class SearchToolsPanel{
	-panel : SearchPanel
	-types : Map<String, Value.Type>
	-comments : boolean
	--
	+SearchToolsPanel(SearchPanel panel)
}
class SearchController{
	--
	*+searchWorkBook(Stack<Workbook> workBooks, String searchstring, Map<String, Value.Type> types, boolean comments)*
	+SearchController(UIController controller);
}


Extension <|-- SearchExtension
UIExtension <|-- UISearch
UIController --> ExtensionManager : getExtensions();
ExtensionManager --> SearchExtension : load(Extension extension);
SearchExtension --> UISearch : new(UIController controller);
UISearch --> SearchReplaceUI : new(UIController controller);
SearchReplaceUI --> SearchResultPanel : new(uiController)
SearchReplaceUI --> SearchController : new(UIController);
SearchReplaceUI --> SearchToolsPanel : new(SearchPanel);

@enduml